Fix general bugs and add types folder

--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,8 @@
     padding: 8px;
   }
 
-  .pagination li:not(.previous):not(.next):not(.active):not(.selected) {
+  .pagination
+    li:not(.previous):not(.next):not(.active):not(.selected):not(.break) {
     display: none;
   }
 }
